<resources>
    <string name="app_name">YaRadio 3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user_guest">Guest</string>
    <string name="login_text">Login</string>
    <string name="no_internet">No internet</string>
    <string name="please_login">Please, login</string>
    <string name="not_supported">Not supported this time</string>
    <string name="logout_text">Logout</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="dislike_track">Dislike</string>
    <string name="like_track">Like</string>
    <string name="loading">Loading</string>
    <string name="track_cover">Track cover</string>
    <string name="track_dislike">Track dislike</string>
    <string name="track_like">Track like</string>
    <string name="language">Language</string>
    <string name="diversity">Diversity</string>
    <string name="mood_energy">Mood</string>
    <string name="update">Update</string>
    <string name="updated">Updated</string>
    <string name="quality">Quality</string>
    <string name="_192_aac_bitrate">High quality - no economy\n(192 bitrate AAC)</string>
    <string name="_128_aac_bitrate">Medium quality - medium economy\n(128 bitrate AAC)</string>
    <string name="_64_aac_bitrate">Low quality - high economy\n(64 bitrate AAC)</string>
    <string name="_192_mp3_bitrate">Pure quality - no economy\n(192 bitrate MP3)</string>
    <string name="update_apk">Update APK\n(current version is %1$s)</string>
    <string name="tag_icon">Tag icon</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="_0" translatable="false">0</string>
    <string name="set_timer">Set timer</string>
    <string name="playback_will_stop_after_time_has_passed">Playback will stop after time has passed</string>
    <string name="timer">Timer</string>
    <string name="timer_info">Timer info</string>
    <string name="incorrect_input">Incorrect input!</string>
    <string name="timer_info_print">Left %1$s hours, %2$s minutes, %3$s seconds</string>
    <string name="playback_will_stop_in">Playback will stop in %1$s</string>
    <string name="already_exist">Already exist</string>
    <string name="download_track">Download track?</string>
    <string name="download_title">Download?</string>
    <string name="error">Error</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
    <string name="track_info">Track info</string>
    <string name="copied">Copied</string>
    <string name="track_history">History</string>
    <string name="settings">Settings</string>
    <string name="next_tracks">Next tracks</string>
    <string name="recommendations">Recommendations</string>
    <string name="no_information">No information</string>
    <string name="left">Left</string>
    <string name="seconds">Seconds</string>
    <string name="please_start_radio">Please, start a radio before activate the timer</string>
</resources>
